fix modal element overflow and zindex

--- a/elements/modal/assets/scss/_styles.scss
+++ b/elements/modal/assets/scss/_styles.scss
@@ -4,6 +4,11 @@ $btncolor: #3489e6;
 
 .cspplity {
   background-color: rgba(0, 0, 0, .65);
+  z-index: 99999;
+}
+
+.cspplity-content {
+  overflow-y: auto;
 }
 
 .cspplity-content:after {
